[package]
name = "url"
version = "0.1.0"
authors = ["yosuke MATSUDA <yosuke.matsuda@balconia.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "1.7"
failure = "0.1"
structopt = "0.2"
atty = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
